--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "sharp": "0.32.6"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.4",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
