--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "dependencies": {
     "@payloadcms/db-postgres": "latest",
+    "@payloadcms/live-preview-react": "^3.6.0",
     "@payloadcms/next": "latest",
     "@payloadcms/payload-cloud": "latest",
-    "@payloadcms/richtext-lexical": "latest",
+    "@payloadcms/richtext-lexical": "^3.6.0",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
     "next": "15.0.4",
@@ -31,13 +32,15 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
-    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.4",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
+    "autoprefixer": "^10.4.20",
     "dotenv-cli": "^7.4.4",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "5.7.2"
   },
   "engines": {
