--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "seed": "dotenv -e .env -- tsx ./src/seed/index.ts"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "latest",
-    "@payloadcms/live-preview-react": "^3.6.0",
-    "@payloadcms/next": "latest",
-    "@payloadcms/payload-cloud": "latest",
-    "@payloadcms/richtext-lexical": "^3.6.0",
+    "@payloadcms/db-postgres": "3.7.0",
+    "@payloadcms/live-preview-react": "3.7.0",
+    "@payloadcms/next": "3.7.0",
+    "@payloadcms/payload-cloud": "3.7.0",
+    "@payloadcms/plugin-seo": "3.7.0",
+    "@payloadcms/richtext-lexical": "3.7.0",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
     "next": "15.0.4",
