--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pg": "^8.13.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.54.2",
     "sharp": "0.32.6"
   },
   "devDependencies": {
