--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dotenv-cli": "^7.4.4",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
     "typescript": "5.7.2"
