--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-DATABASE_URI=postgres://postgres:viovera789@127.0.0.1:5432/aguscustom
-PAYLOAD_SECRET=15fd88047358ad5fb4b93513
+# Added by Payload
+DATABASE_URI=postgres://root:nopass@127.0.0.1:5432/aguscustom
+PAYLOAD_SECRET=15fd88047358ad5sdkjudsfni87649ddd
+ADMIN_DEFAULT_PASSWORD=viovera789
+NEXT_PUBLIC_SERVER_URL=http://localhost:3331
+MAX_MEDIA_COUNT=5000
