--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-config-next": "15.0.4",
     "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8.4.49",
+    "tailwind-scrollbar": "^4.0.0-beta.0",
     "tailwindcss": "^3.4.16",
     "typescript": "5.7.2"
   },
